Enhance CORS configuration and add comprehensive media service tests.