@@ -2,9 +2,12 @@ package com.medina.heritage.media.config;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.boot.web.servlet.FilterRegistrationBean;
+import org.springframework.core.Ordered;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.web.filter.CorsFilter;
 
 import java.util.Arrays;
 import java.util.List;
@@ -18,20 +21,30 @@ public class CorsConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        
-        // Origines autorisées (à configurer pour la production)
-        configuration.setAllowedOrigins(Arrays.asList(
-                "http://localhost:3000",
-                "http://localhost:8080"
-        ));
+    
+    configuration.setAllowedOriginPatterns(Arrays.asList(
+        "http://localhost:*",
+        "http://127.0.0.1:*",
+        "http://localhost",
+        "http://127.0.0.1"
+    ));
+    // Also include common dev frontend origins explicitly
+    configuration.setAllowedOrigins(Arrays.asList(
+        "http://localhost:3000",
+        "http://localhost:8080",
+        "http://127.0.0.1:5500",
+        "http://localhost:5500"
+    ));
         
         // Méthodes HTTP autorisées
         configuration.setAllowedMethods(Arrays.asList(
                 "GET", "POST", "PUT", "DELETE", "OPTIONS"
         ));
         
-        // Headers autorisés
-        configuration.setAllowedHeaders(List.of("*"));
+    // Headers autorisés
+    configuration.setAllowedHeaders(List.of("*"));
+    // Headers exposés au navigateur (si besoin)
+    configuration.setExposedHeaders(Arrays.asList("Authorization", "Content-Disposition", "Content-Type"));
         
         // Autoriser les credentials (cookies, auth headers)
         configuration.setAllowCredentials(true);
@@ -41,7 +54,23 @@ public class CorsConfig {
         
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/api/**", configuration);
+        // also register for actuator or other endpoints if needed
+        source.registerCorsConfiguration("/static/**", configuration);
         
         return source;
+    }
+
+    /**
+     * Register a CorsFilter with high precedence to ensure CORS headers
+     * are added to responses even when other filters or security layers exist.
+     */
+    @Bean
+    public FilterRegistrationBean<CorsFilter> corsFilterRegistration() {
+        CorsConfigurationSource source = corsConfigurationSource();
+        CorsFilter filter = new CorsFilter(source);
+        FilterRegistrationBean<CorsFilter> registration = new FilterRegistrationBean<>(filter);
+        registration.setOrder(Ordered.HIGHEST_PRECEDENCE);
+        registration.addUrlPatterns("/*");
+        return registration;
     }
 }
